--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon --exec babel-node ./server/server.js",
-    "test": "nyc --require @babel/register mocha ./server/tests --exit",
+    "test": "nyc --require @babel/register mocha ./server/tests/*.js --exit",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
