--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon --exec babel-node ./server/server.js",
-    "test": "nyc --require @babel/register mocha ./server/tests/*.js --exit",
+    "test": "nyc --require @babel/register mocha ./server/test --exit",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
@@ -23,8 +23,6 @@
     "chai-http": "^4.3.0",
     "coveralls": "^3.0.6",
     "eslint": "^6.4.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
     "mocha": "^6.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "morgan": "^1.9.1",
