--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Teamwork is an internal social network for organizations employees, the goal of this application is to facilitate more interaction between colleagues and facilitate team bonding.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon --exec babel-node ./server/server.js",
+    "start": "node --exec babel-node ./server/server.js",
+    "dev": "nodemon --exec babel-node ./server/server.js",
     "test": "nyc --require @babel/register mocha ./Server/test/*.js --exit",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
