--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Teamwork is an internal social network for organizations employees, the goal of this application is to facilitate more interaction between colleagues and facilitate team bonding.",
   "main": "server.js",
   "scripts": {
-    "start": "node --exec babel-node ./server/server.js",
+    "start": "nodemon --exec babel-node ./server/server.js",
     "dev": "nodemon --exec babel-node ./server/server.js",
     "test": "nyc --require @babel/register mocha ./Server/test/*.js --exit",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
@@ -27,7 +27,6 @@
     "mocha": "^6.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.2",
     "nyc": "^14.1.1"
   },
   "dependencies": {
@@ -43,6 +42,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "nodemon": "^1.19.2"
   }
 }
