--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon --exec babel-node ./server/app.js",
-    "dev": "nodemon --exec babel-node ./server/app.js",
+    "build": "babel ./Server -d build",
+    "dev": "npm run build && node build/app.js",
     "test": "nyc --require @babel/register mocha ./Server/test/*.js --exit",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
