--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "npm run build && node build/app.js",
     "build": "babel ./Server -d build",
     "dev": "nodemon --exec babel-node ./server/app.js",
-    "test": "nyc --require @babel/register mocha ./Server/test/*.js --exit",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "test": "cross-env NODE_ENV=isTesting npm run deleteTables && cross-env NODE_ENV=isTesting npm run createTables && cross-env NODE_ENV=isTesting nyc --require @babel/polyfill --require @babel/register mocha ./Server/v1/test/*.js ./Server/v2/test/*.js --exit",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "createTables": "node --require @babel/polyfill --require @babel/register Server/v2/models/model.createTable.js",
+    "deleteTables": "node --require @babel/polyfill --require @babel/register Server/v2/models/model.deleteTable.js"
   },
   "repository": {
     "type": "git",
@@ -24,10 +26,17 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "coveralls": "^3.0.6",
-    "eslint": "^6.4.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "mocha": "^6.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "prettier": "^1.18.2"
   },
   "dependencies": {
     "@babel/cli": "^7.6.2",
@@ -39,11 +48,14 @@
     "@hapi/joi": "^16.1.4",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "cross-env": "^6.0.3",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "pg": "^7.12.1",
+    "uuid": "^3.3.3"
   }
 }
