--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 services:
   - postgresql  
 before_script:
-  - psql -c 'create database Teamwork_Testing;' -U postgres
+  - psql -c 'create database testing;' -U postgres
 cache: npm
 script: 
   - npm run test   
